--- a/Kanban/components/editTask/EditTask.css
+++ b/Kanban/components/editTask/EditTask.css
@@ -37,8 +37,7 @@
   justify-content: flex-end;
   height: 4em;
   border-top: solid thin gray;
-  position: absolute;
-  bottom: 0;
+  margin-top: 2em;
 }
 
 .close-icon {
