--- a/Kanban/components/kanbanView/KanbanView.css
+++ b/Kanban/components/kanbanView/KanbanView.css
@@ -1,7 +1,7 @@
 .main-board {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100% !important;
   height: 100vh;
   position: relative;
 }
@@ -27,8 +27,9 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  align-items: center;
-  justify-content: center;
+  flex: 1;
+  /* align-items: center;
+  justify-content: center; */
 }
 .col-ordered-div {
   display: flex;
