--- a/Kanban/components/kanbanView/KanbanView.css
+++ b/Kanban/components/kanbanView/KanbanView.css
@@ -10,6 +10,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+
   /* position: relative; */
 }
 .change-week-button-div {
@@ -137,4 +138,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.spinner-div {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
