--- a/Kanban/components/taskCard/TaskCard.css
+++ b/Kanban/components/taskCard/TaskCard.css
@@ -25,7 +25,7 @@
 
 .task-card-footer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border-top: solid thin rgb(231, 231, 231);
 }
 
@@ -75,4 +75,11 @@
 
 .ms-Modal-scrollableContent {
   height: 100% !important;
+}
+.action-button {
+  color: rgb(0, 123, 183);
+  font-weight: bold;
+}
+.action-button:hover {
+  cursor: pointer;
 }
