--- a/Kanban/components/kanbanView/KanbanView.css
+++ b/Kanban/components/kanbanView/KanbanView.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100% !important;
-  height: 100vh;
+  height: 100%;
   position: relative;
 }
 .queue-div {
@@ -10,6 +10,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  min-height: 100%;
 
   /* position: relative; */
 }
@@ -84,6 +85,7 @@
 }
 
 .project-task-list {
+  position: relative;
   border-top: solid thick black;
   /* rgb(0, 123, 183); */
   /* color: rgb(0, 123, 183); */
@@ -110,14 +112,12 @@
 .project-task-div {
   display: flex;
   flex-direction: column;
-  border-left: solid thin gray;
   flex: 1;
 }
 
 .week-day-div {
   display: flex;
   flex-direction: column;
-  border-left: solid thin gray;
   flex: 7;
 }
 
@@ -146,4 +146,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.add-icon {
+  position: absolute;
+  right: 0;
 }
